8.4.1 (30-06-2022)
- Bug Fix: Fix the missing return from calculating the tariff when the academic service request has the cycle type

8.4.0 (24-06-2022)
- Refactor: Change relation between ReservationTaxEventTarget and ExecutionInterval, instead of ExecutionYear
- Improvement: Support consumers when invoking ReservationTaxEventTarget::handleTotalPayment
- Bug Fix: Various bug fixes and improvements in ReservationTax

8.3.9 (21-06-2022)
- Refactor: When creating consider academic tariffs with AdministrativeOffice or without AdministrativeOffice as the same, when checking if there is a overlapping tariffs
- Refactor: Find match of academic tariffs for degreeType, degree or cycle type with or without AdministrativeOffice

8.3.8 (21-06-2022)
- Bug Fix: Fix condition in check rules for requirement of TuitionInstallmentTariff fixedAmount
- Bug Fix: Check if TuitionPaymentPlan.customizedName is not null before filling it in TuitionPaymentPlanBean
- Bug Fix: Intialize map between condition and values in TuitionPaymentPlanBean

8.3.7 (18-06-2022)
- Bug Fix: Return degreeCode for AcademicTreasuryEvent, for standaloneTuition, extracurricularTuition, improvementTuition and customAcademicDebt

8.3.6 (02-06-2022)
- Refactor: Return code of PersonCustomer from Customer::getCode instead of externalId

8.3.5 (17-05-2022)
- Bug Fix: Fix personal email field in debt report

8.3.4 (02-05-2022)
- Improvement: Add reimbursement state in reimbursements report
- Improvement: Add more fields to treasury exemption reports
- Improvement: Report debt account with customer code
- Bug Fix: Allow parametrization of tuition payment plans in one finantial entity, given degree curricular plan and execution year
- Bug Fix: Remove erroneous and misleading method TuitionPaymentPlan::finantialEntity. TuitionPaymentPlan already associates to Finantial Entity

8.3.3 (22-04-2022)
- Bug Fix: Use VAT find with current dateTime, instead of the debt date

8.3.2 (13-04-2022)